deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zocket-key-value-store
  labels:
    app: zocket-key-value-store
spec:
  selector:
    app: zocket-key-value-store
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP # We use ClusterIP since ingress will handle external access
